profiling-using-exp-runner/backup_FINAL_RESULTS/fibonacci_experiment_1/run_7_repetition_0/energibridge.log
sampling interval: 200, target function: fibonacci_cache, input size: 30
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import recursive.fibonacci as module; X = 30; module.fibonacci_cache(X); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 10.140758514404297 for 0.22629228 sec of execution.
